Split JCommander utilities into a new subproject
This frees dexlib2 from having JCommander as a transitive dependency.

--- a/baksmali/build.gradle
+++ b/baksmali/build.gradle
@@ -40,6 +40,7 @@ buildscript {
 
 dependencies {
     compile project(':util')
+    compile project(':util-jcommander')
     compile project(':dexlib2')
     compile depends.guava
     compile depends.jcommander
