--- a/smali/build.gradle
+++ b/smali/build.gradle
@@ -74,6 +74,7 @@ idea {
 
 dependencies {
     compile project(':util')
+    compile project(':util-jcommander')
     compile project(':dexlib2')
     compile depends.antlr_runtime
     compile depends.jcommander
