--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include 'util', 'dexlib2', 'baksmali', 'smali', 'dexlib2:accessorTestGenerator'
+include 'util', 'util-jcommander', 'dexlib2', 'baksmali', 'smali', 'dexlib2:accessorTestGenerator'
 
 if (System.getProperty("user.dir").startsWith(file("smalidea").absolutePath)) {
     include 'smalidea'
