Upgraded to Gradle 5.1; fixed two issues, caused by the changes of the version upgrade; RESULT: build succeeds on Ubuntu 18.04 with openJDK 11; version details see below
Gradle        5.1
Build time:   2019-01-02 18:57:47 UTC
Revision:     d09c2e354576ac41078c322815cc6db2b66d976e

Kotlin DSL:   1.1.0
Kotlin:       1.3.11
Groovy:       2.5.4
Ant:          Apache Ant(TM) version 1.9.13 compiled on July 10 2018
JVM:          11.0.2 (Oracle Corporation 11.0.2+9-Ubuntu-3ubuntu118.04.3)
OS:           Linux 4.15.0-47-generic amd64
Distro:       Ubuntu 18.04.2 LTS

--- a/build.gradle
+++ b/build.gradle
@@ -185,7 +185,7 @@ buildscript {
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.6'
+wrapper {
+    gradleVersion = '5.1'
     distributionType = Wrapper.DistributionType.ALL
 }
