--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ subprojects {
 
     ext {
         depends = [
-                guava: 'com.google.guava:guava:18.0',
+                guava: 'com.google.guava:guava:27.1-android',
                 findbugs: 'com.google.code.findbugs:jsr305:1.3.9',
                 junit: 'junit:junit:4.12',
                 mockito: 'org.mockito:mockito-core:1.10.19',
