Fix gradle release task when sonatypeUsername are not exist in rootProject Fix testInvalidReference test in windows platform Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 /.gradle
+/baksmali/bin
 /baksmali/build
+/dexlib/bin
 /dexlib/build
+/dexlib2/bin
 /dexlib2/build
+/dexlib2/accessorTestGenerator/bin
 /dexlib2/accessorTestGenerator/build
+/smali/bin
 /smali/build
+/util/bin
 /util/build
+/smalidea/bin
 /smalidea/build
+/release
 *.iml
 *.ipr
 *.iws
