--- a/util/build.gradle
+++ b/util/build.gradle
@@ -37,12 +37,16 @@ dependencies {
     testImplementation depends.junit
 }
 
-uploadArchives {
-    repositories.mavenDeployer {
-        pom.project {
-            description 'This library contains random utilities used by smali/baksmali/dexlib2'
-            scm {
-                url 'https://github.com/JesusFreke/smali/tree/master/util'
+publish {
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                pom {
+                    description = 'This library contains random utilities used by smali/baksmali/dexlib2'
+                    scm {
+                        url = 'https://github.com/JesusFreke/smali/tree/master/util'
+                    }
+                }
             }
         }
     }
