Allow duplicate paths in the smali sourcesJar task
This fixes a gradle deprecation warning

--- a/smali/build.gradle
+++ b/smali/build.gradle
@@ -158,4 +158,8 @@ task proguard(type: proguard.gradle.ProGuardTask, dependsOn: fatJar) {
     dontnote 'com.google.common.**'
 }
 
+sourcesJar {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
 tasks.getByPath(':release').dependsOn(proguard)
