Switch to api dependency for dexlib2 in smali and baksmali
dexlib2 classes are a part of the smali and baksmali public api

--- a/baksmali/build.gradle
+++ b/baksmali/build.gradle
@@ -40,7 +40,7 @@ buildscript {
 
 dependencies {
     implementation project(':util')
-    implementation project(':dexlib2')
+    api project(':dexlib2')
     implementation depends.guava
     implementation depends.jcommander
 
